[gd_scene load_steps=3 format=2]

[ext_resource path="res://examples/tween-basics-scale.gd" type="Script" id=1]
[ext_resource path="res://assets/icon.png" type="Texture" id=2]


[node name="tween-basics-scale" type="Node2D"]
script = ExtResource( 1 )

[node name="EaseInIcon" type="Sprite" parent="."]
position = Vector2( 64, 96 )
texture = ExtResource( 2 )

[node name="EaseOutIcon" type="Sprite" parent="."]
position = Vector2( 160, 148 )
texture = ExtResource( 2 )

[node name="EaseInOutIcon" type="Sprite" parent="."]
position = Vector2( 256, 200 )
texture = ExtResource( 2 )

[node name="EaseOutInIcon" type="Sprite" parent="."]
position = Vector2( 352, 248 )
texture = ExtResource( 2 )

[node name="Tween1" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]

[node name="Tween3" type="Tween" parent="."]

[node name="Tween4" type="Tween" parent="."]

[node name="Label1" type="Label" parent="."]
margin_left = 532.0
margin_top = 87.0
margin_right = 642.0
margin_bottom = 114.0
rect_pivot_offset = Vector2( 92, 27 )
text = "ease-in"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 532.0
margin_top = 135.0
margin_right = 642.0
margin_bottom = 162.0
rect_pivot_offset = Vector2( 92, 27 )
text = "ease-out"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 532.0
margin_top = 186.0
margin_right = 642.0
margin_bottom = 213.0
rect_pivot_offset = Vector2( 92, 27 )
text = "ease-in-out"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
margin_left = 531.0
margin_top = 237.0
margin_right = 641.0
margin_bottom = 264.0
rect_pivot_offset = Vector2( 92, 27 )
text = "ease-out-in"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="."]
margin_left = 37.0
margin_top = 10.0
margin_right = 175.0
margin_bottom = 24.0
text = "TRANS_LINEAR = 0  The animation is interpolated linearly."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 33.9411
margin_top = 301.228
margin_right = 488.941
margin_bottom = 371.228
custom_constants/vseparation = 5
custom_constants/hseparation = 11
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransLinearButton" type="Button" parent="GridContainer"]
margin_right = 105.0
margin_bottom = 20.0
text = "TRANS_LINEAR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransSineButton" type="Button" parent="GridContainer"]
margin_left = 116.0
margin_right = 220.0
margin_bottom = 20.0
text = "TRANS_SINE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransQuintButton" type="Button" parent="GridContainer"]
margin_left = 231.0
margin_right = 340.0
margin_bottom = 20.0
text = "TRANS_QUINT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransQuartButton" type="Button" parent="GridContainer"]
margin_left = 351.0
margin_right = 455.0
margin_bottom = 20.0
text = "TRANS_QUART"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransQuadButton" type="Button" parent="GridContainer"]
margin_top = 25.0
margin_right = 105.0
margin_bottom = 45.0
text = "TRANS_QUAD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransExpoButton" type="Button" parent="GridContainer"]
margin_left = 116.0
margin_top = 25.0
margin_right = 220.0
margin_bottom = 45.0
text = "TRANS_EXPO"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransElasticButton" type="Button" parent="GridContainer"]
margin_left = 231.0
margin_top = 25.0
margin_right = 340.0
margin_bottom = 45.0
text = "TRANS_ELASTIC"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransCubicButton" type="Button" parent="GridContainer"]
margin_left = 351.0
margin_top = 25.0
margin_right = 455.0
margin_bottom = 45.0
text = "TRANS_CUBIC"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransCircButton" type="Button" parent="GridContainer"]
margin_top = 50.0
margin_right = 105.0
margin_bottom = 70.0
text = "TRANS_CIRC"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransBounceButton" type="Button" parent="GridContainer"]
margin_left = 116.0
margin_top = 50.0
margin_right = 220.0
margin_bottom = 70.0
text = "TRANS_BOUCE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransBackButton" type="Button" parent="GridContainer"]
margin_left = 231.0
margin_top = 50.0
margin_right = 340.0
margin_bottom = 70.0
text = "TRANS_BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel2" type="Label" parent="."]
margin_left = 33.8783
margin_top = 380.924
margin_right = 401.878
margin_bottom = 394.924
text = "Note: Animation changes applied after the current animation  completes."
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="tween_completed" from="Tween1" to="." method="_on_Tween_tween_completed"]
[connection signal="pressed" from="GridContainer/TransLinearButton" to="." method="_on_TransLinearButton_pressed"]
[connection signal="pressed" from="GridContainer/TransSineButton" to="." method="_on_TransSineButton_pressed"]
[connection signal="pressed" from="GridContainer/TransQuintButton" to="." method="_on_TransQuintButton_pressed"]
[connection signal="pressed" from="GridContainer/TransQuartButton" to="." method="_on_TransQuartButton_pressed"]
[connection signal="pressed" from="GridContainer/TransQuadButton" to="." method="_on_TransQuadButton_pressed"]
[connection signal="pressed" from="GridContainer/TransExpoButton" to="." method="_on_TransExpoButton_pressed"]
[connection signal="pressed" from="GridContainer/TransElasticButton" to="." method="_on_TransElasticButton_pressed"]
[connection signal="pressed" from="GridContainer/TransCubicButton" to="." method="_on_TransCubicButton_pressed"]
[connection signal="pressed" from="GridContainer/TransCircButton" to="." method="_on_TransCircButton_pressed"]
[connection signal="pressed" from="GridContainer/TransBounceButton" to="." method="_on_TransBounceButton_pressed"]
[connection signal="pressed" from="GridContainer/TransBackButton" to="." method="_on_TransBackButton_pressed"]
